workshops/dockerton-2018/kubernetes-workshop-orders/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  selector:
    app: order-service
