workshops/dockerton-2018/kubernetes-workshop-orders/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-service
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: api.dfds.cloud
    http:
      paths:
      - path: /orders
        backend:
          serviceName: order-service
          servicePort: external
